--- a/gmall1015-logger/src/main/resources/application.properties
+++ b/gmall1015-logger/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=80
 
 #============== kafka ===================
-# 指定kafka 代理地址，可以多个
-spring.kafka.bootstrap-servers=hadoop1:9092,hadoop2:9092,hadoop3:9092
+# \u05B8\uFFFD\uFFFDkafka \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u05B7\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0536\uFFFD\uFFFD
+spring.kafka.bootstrap-servers=hadoop102:9092,hadoop103:9092,hadoop104:9092
 
 
-# 指定消息key和消息体的编解码方式
+# \u05B8\uFFFD\uFFFD\uFFFD\uFFFD\u03E2key\uFFFD\uFFFD\uFFFD\uFFFD\u03E2\uFFFD\uFFFD\u0131\uFFFD\uFFFD\uFFFD\uBDFD\u02BD
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
