--- a/gmall1015-realtime/src/main/resources/config.properties
+++ b/gmall1015-realtime/src/main/resources/config.properties
@@ -1,6 +1,6 @@
-# Kafka≈‰÷√
-kafka.broker.list=hadoop1:9092,hadoop2:9092,hadoop3:9092
+# Kafka\uFFFD\uFFFD\uFFFD\uFFFD
+kafka.broker.list=hadoop102:9092,hadoop103:9092,hadoop104:9092
 
-# Redis≈‰÷√
-redis.host=hadoop1
+# Redis\uFFFD\uFFFD\uFFFD\uFFFD
+redis.host=hadoop102
 redis.port=6379
